chore: updating tests
Signed-off-by: Michael Yingbull <michael@maplecreekmedical.ca>